Basic documentation generator to enable docs test

--- a/tox.ini
+++ b/tox.ini
@@ -23,10 +23,10 @@ deps =
     django111: Django>=1.11,<2.0
     coverage
 
-#[testenv:docs]
-#changedir = docs
-#deps =
-#    django>=1.8
-#    sphinx
-#    sphinx_rtd_theme
-#commands = sphinx-build -b html -d _build/doctrees   . _build/html
+[testenv:docs]
+changedir = docs
+deps =
+    django>=1.8
+    sphinx
+    sphinx_rtd_theme
+commands = sphinx-build -b html -d _build/doctrees   . _build/html
