--- a/tox.ini
+++ b/tox.ini
@@ -1,27 +1,34 @@
-# Tox (https://tox.readthedocs.io/en/latest/index.html) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
 minversion=1.8.0
 envlist =
-    py27-django{18,19,110,111}
-    py33-django{18}
-    py34-django{18,19,110,111}
-    py35-django{19,110,111}
-    py36-django{110,111}
+    py27-{18,19,110,111}
+    py33-{18}
+    py34-{18,19,110,111}
+    py35-{19,110,111}
+    py36-{110,111,master}
+    flake8
     docs
 
 [testenv]
 commands =
   coverage run --append --source='.' manage.py test -v1 --noinput
 deps =
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
-    django110: Django>=1.10,<1.11
-    django111: Django>=1.11,<2.0
     coverage
+    18: Django>=1.8,<1.9
+    19: Django>=1.9,<1.10
+    110: Django>=1.10,<1.11
+    111: Django>=1.11,<2.0
+    master: https://github.com/django/django/archive/master.tar.gz
+
+[testenv:flake8]
+basepython = python3.6
+commands = flake8
+deps = flake8
+
+[flake8]
+ignore = F401,E731
+exclude = .git,.tox,__pycache__
+max-line-length = 120
 
 [testenv:docs]
 changedir = docs
@@ -29,4 +36,4 @@ deps =
     django>=1.8
     sphinx
     sphinx_rtd_theme
-commands = sphinx-build -b html -d _build/doctrees   . _build/html
+commands = sphinx-build -b html -d _build/doctrees . _build/html
