Update README (Django version) and tox (coverage)

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,19 @@
 [tox]
-minversion=1.8.0
+minversion = 1.8.0
 envlist =
+    coverage-clean
     py27-{18,19,110,111}
     py33-{18}
     py34-{18,19,110,111}
     py35-{19,110,111}
     py36-{110,111,master}
+    coverage-report
     flake8
     docs
 
 [testenv]
 commands =
-  coverage run --append --source='.' manage.py test -v1 --noinput
+    coverage run --append --source='./fa' manage.py test -v1 --noinput
 deps =
     coverage
     18: Django>=1.8,<1.9
@@ -19,6 +21,14 @@ deps =
     110: Django>=1.10,<1.11
     111: Django>=1.11,<2.0
     master: https://github.com/django/django/archive/master.tar.gz
+
+[testenv:coverage-clean]
+commands = coverage erase
+
+[testenv:coverage-report]
+commands =
+    coverage report
+    coverage html
 
 [testenv:flake8]
 basepython = python3.6
