--- a/tox.ini
+++ b/tox.ini
@@ -42,8 +42,7 @@ max-line-length = 120
 
 [testenv:docs]
 changedir = docs
-deps =
-    django>=1.8
-    sphinx
-    sphinx_rtd_theme
+whitelist_externals = make
 commands = sphinx-build -b html -d _build/doctrees . _build/html
+deps =
+    -r{toxinidir}/docs/requirements.txt
